--- a/papDjango/charts/templates/charts/base.html
+++ b/papDjango/charts/templates/charts/base.html
@@ -9,7 +9,7 @@
     <div id="sidebar">
         {% block sidebar %}
         <ul>
-            <li><a href="{% url 'charts' %}">Home</a></li>
+            <li><a href="{% url 'charts:index' %}">Home</a></li>
             <!-- <li><a href="/blog/">Blog</a></li> -->
         </ul>
         {% endblock %}
