--- a/papDjango/charts/templates/charts/graph.html
+++ b/papDjango/charts/templates/charts/graph.html
@@ -3,12 +3,121 @@
 
 
 <div>Test</div>
-<div id="container" class="chart-wrapper" align="center">
+<div id="container" class="chart-wrapper" width=600 height=480 align="center">
     <h1>{{ title }}</h1>
-    <svg id="chartID"  width=200 height=200>
+    <svg id="chartID"  width=600 height=480>
     </svg>
 </div>
 
+<style>
+    .chart-wrapper {
+        max-width: 950px;
+        min-width: 304px;
+        margin: 0 auto;
+        background-color: #ffffff;
+    }
+    
+    .chart-wrapper .inner-wrapper {
+        position: relative;
+        padding-bottom: 50%;
+        width: 100%;
+    }
+    
+    .chart-wrapper .outer-box {
+        position: absolute;
+        top: 0; bottom: 0; left: 0; right: 0;
+    }
+    
+    .chart-wrapper .inner-box {
+        width: 100%;
+        height: 100%;
+    }
+    
+    .chart-wrapper text {
+      font-family: sans-serif;
+      font-size: 12px;
+    }
+    
+    .chart-wrapper p {
+        font-size: 18px;
+        margin-top:5px;
+        margin-bottom: 40px;
+    }
+    
+    .chart-wrapper .axis path,
+    .chart-wrapper .axis line {
+        fill: none;
+        stroke: #1F1F2E;
+        stroke-opacity: 0.7;
+        shape-rendering: crispEdges;
+    
+    }
+    .chart-wrapper .axis path {
+      stroke-width: 2px;
+    }
+    
+    .chart-wrapper .line {
+      fill: none;
+      stroke: steelblue;
+      stroke-width: 2.5px;
+    }
+    
+    .chart-wrapper .legend  {
+        min-width: 200px;
+        display: flex;
+        justify-content: flex-start;
+        flex-wrap: wrap;
+        font-size: 16px;
+        padding: 10px 50px ;
+    }
+    .chart-wrapper .legend > div {
+        margin: 0px 25px 10px 0px;
+        flex-grow: 0;
+    }
+    .chart-wrapper .legend p {
+        display:inline;
+        font-size: 0.8em;
+        font-family: sans-serif;
+        font-weight: 600;
+    }
+     
+    .chart-wrapper .legend .series-marker {
+        height: 1em;
+        width: 1em;
+        border-radius: 5%;
+        background-color: crimson;
+        display: inline-block;
+        margin-right: 4px;
+        margin-bottom: -0.16rem;
+    }
+    
+    .chart-wrapper .overlay {
+      fill: none;
+      pointer-events: all;
+    }
+    
+    .chart-wrapper .focus circle {
+      fill: black;
+      stroke: crimson;
+      stroke-width: 2px;
+      fill-opacity: 15%;
+    }
+    .chart-wrapper .focus rect {
+        fill: lightblue;
+        opacity: 0.4;
+        border-radius: 2px;
+    }
+    .chart-wrapper .focus.line {
+        stroke: steelblue;
+        stroke-dasharray: 2,5;
+        stroke-width: 2.5;
+        opacity: 0.7;
+    }
+    @media (max-width:500px){
+        .chart-wrapper .line {stroke-width: 3px;}
+        .chart-wrapper .legend {font-size: 14px;}
+    }
+      </style>
 <!-- <script>
     // import { scaleLinear, scaleBand } from "d3-scale";
     // import { max, min } from "d3-array";
@@ -444,8 +553,8 @@
         // }
         //Todo check
         // Object instead of array
-        chartObj.yFunct = function(d){return d.head};
-        chartObj.xFunct = function(d){return d.flow};
+        chartObj.yFunct = function(d){return d.x};
+        chartObj.xFunct = function(d){return d.y};
         chartObj.bisect = d3.bisector(chartObj.xFunct).left; //< Can be overridden in definition
         // for (var pump in chartObj.pumpsList) {
         //     //console.log(y);
@@ -834,7 +943,7 @@
                 }},
                 errors: null
                     } );
-    chart.bind("#chartID");
+    chart.bind("#container");
     chart.render();
 </script> 
 
