--- a/papDjango/charts/templates/charts/graph.html
+++ b/papDjango/charts/templates/charts/graph.html
@@ -5,7 +5,7 @@
 <div>Test</div>
 <div id="container" class="chart-wrapper" width=600 height=480 align="center">
     <h1>{{ title }}</h1>
-    <svg id="chartID"  width=600 height=480>
+    <!-- <svg id="chartID"  width=600 height=480> -->
     </svg>
 </div>
 
