--- a/papDjango/charts/templates/base.html
+++ b/papDjango/charts/templates/base.html
@@ -48,36 +48,42 @@
         {% endblock head_css %} -->
     </head>
     
-<body>
-    <ul class="sidebar-nav">
+    {% load static %}
+<body class="pt-3">
+    <nav class="navbar fixed-top navbar-expand-md navbar-dark bg-primary">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+          
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav">
 
-       
+            {% if user.is_authenticated %}
+              <li class="nav-item nav-link active">User: {{ user.get_username }}</li>
+              <li class="nav-item"><a class="nav-link" href="{% url 'logout'%}?next={{request.path}}">Logout</a></li>
+              
+                {% block sidebar %}
+                <li class="nav-item"><a class="nav-link" href="{% url 'charts:index' %}">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="{% url 'charts:cart' %}">Cart</a></li>       
+                {% endblock %}
+
+            {% else %}
+              <li class="nav-item"><a class="nav-link" href="{% url 'login'%}?next={{request.path}}">Login</a></li>
+            {% endif %} 
+            
+           </ul>
+           
+    </div>
+    </nav>
+        
     
-       {% if user.is_authenticated %}
-         <li>User: {{ user.get_username }}</li>
-         <li><a href="{% url 'logout'%}?next={{request.path}}">Logout</a></li>
-       {% else %}
-         <li><a href="{% url 'login'%}?next={{request.path}}">Login</a></li>
-       {% endif %} 
-      </ul>
-    
-    <div class="container">
+    <div class="container pt-5">
         <div class="row justify-content-center">
           <div class="col-8">
-            <div id="sidebar">
-                {% block sidebar %}
-                <ul>
-                    <li><a href="{% url 'charts:index' %}">Home</a></li>
-                    <li><a href="{% url 'charts:select' %}">Chart</a></li>
-                    <!-- <li><a href="/blog/">Blog</a></li> -->
-                </ul>
-                {% endblock %}
-            </div>
-
+            
             <div id="content">
                 {% block content %}{% endblock %}
             </div>
-
             
             </div>
         </div>
