--- a/papDjango/charts/templates/charts/js.html
+++ b/papDjango/charts/templates/charts/js.html
@@ -8,7 +8,7 @@
 
 <link rel="stylesheet" type="text/css" href="{% static 'charts/css/d3Chart.css' %}">
 
-<div id="container" class="chart-wrapper" width=600 height=480 align="center">
+<div id="container" class="chart-wrapper col-8"  align="center">
 </div>
 
 <script type="text/javascript" src="{% static 'charts/js/d3Chart.js' %}"></script>
